// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c4 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  max-width: 25rem;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c14 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c5 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5:not(:disabled):focus,.c5:not(:disabled):focus-within,
.c5:not(:disabled):active,.c5:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c8 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c9 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c10 {
  padding: 2rem;
}

.c6 {
  color: #1e1e1e;
  width: 25rem;
  max-width: 25rem;
}

.c6:focus,
.c6:active,
.c6:hover {
  color: #44aeff;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c12 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  display: none;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c7 {
  margin: 0 0.5rem 1rem 0.5rem;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:not(:disabled):focus,.c5:not(:disabled):focus-within,
  .c5:not(:disabled):active,.c5:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c9 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c6:focus,
  .c6:active,
  .c6:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c11 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c13 {
    min-width: 10rem;
    text-align: unset;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Admin
      </h1>
    </div>
    <div
      class="c4"
    >
      <a
        aria-label="Site status"
        class="c5 c6 c7"
        href="/status"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c11"
            >
              <div
                class="c12 date container"
              />
              <div
                class="c13"
              >
                <h1
                  class="c14"
                >
                  Site status
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Debug settings"
        class="c5 c6 c7"
        href="/debug"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c11"
            >
              <div
                class="c12 date container"
              />
              <div
                class="c13"
              >
                <h1
                  class="c14"
                >
                  Debug settings
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Analytics"
        class="c5 c6 c7"
        href="/admin/analytics"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c11"
            >
              <div
                class="c12 date container"
              />
              <div
                class="c13"
              >
                <h1
                  class="c14"
                >
                  Analytics
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Emails"
        class="c5 c6 c7"
        href="/admin/emails"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c11"
            >
              <div
                class="c12 date container"
              />
              <div
                class="c13"
              >
                <h1
                  class="c14"
                >
                  Emails
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Notifications"
        class="c5 c6 c7"
        href="/admin/notifications"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c11"
            >
              <div
                class="c12 date container"
              />
              <div
                class="c13"
              >
                <h1
                  class="c14"
                >
                  Notifications
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Users"
        class="c5 c6 c7"
        href="/admin/users"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c11"
            >
              <div
                class="c12 date container"
              />
              <div
                class="c13"
              >
                <h1
                  class="c14"
                >
                  Users
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c6 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c5 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  margin: 0;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c4 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  max-width: 25rem;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="c5"
  >
    <h1
      class="c6 c7"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 8rem;
  height: 2.2rem;
  margin-top: 3.34rem;
}

.c4 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
  width: 100%;
  max-width: 25rem;
  height: 10rem;
  margin-bottom: 1.2rem;
}

.c2 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

<div>
  <div
    aria-label="Loading"
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="c4"
      >
        <div
          class="c2"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c5 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c5:focus-within,
.c5:focus {
  position: relative;
  outline: none !important;
}

.c5:focus-within::after,
.c5:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c5:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c2 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c6 {
  margin: 0;
}

.c1 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  margin: 3.34rem 0 0 0;
}

.c4 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c4:first-of-type {
  margin-top: 0.86rem;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c5:focus-within::after,
  .c5:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: orchid;
    fill: orchid;
  }

  .c5:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="c4"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="c5"
          href="/login"
        >
          <span
            class="c6"
          >
            Got a different admin account? Log in here.
          </span>
        </a>
      </span>
    </div>
  </div>
</div>
`;
